<resources>
    <string name="app_name">MigraineTracker</string>

    <string name="journal_title">Add A Journal Entry</string>
    <string name="tester_fragment_text">Just a test</string>
    <string name="journal_entry_title">Journal Entry:</string>
    <string name="journal_entry_morning">Morning</string>
    <string name="journal_entry_afternoon">Afternoon</string>
    <string name="journal_entry_evening">Evening</string>
    <string name="calendar_entry_check">Entry:</string>
    <string name="calendar_entry_initial">Select A Date</string>
    <string name="calendar_entry_exists">Edit Entry</string>
    <string name="calendar_entry_new">Create New Entry</string>
    <string name="journal_entry_trigger">Triggers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
