<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ca.amritpal.migrainetracker.ui.calendar.CalendarFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/calendar_view_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/journal_title"
        android:textAlignment="center"
        app:layout_heightPercent="5%"
        />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="65%"
        />

    <TextView
        android:id="@+id/calendar_entry_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="5%"
        android:layout_below="@id/calendar_view"
        android:text="@string/calendar_entry_check"
        android:textAlignment="center"
        android:paddingTop="5dp"
        />

    <TextView
        android:id="@+id/calendar_entry_check"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="5%"
        android:layout_below="@id/calendar_entry_title"
        android:text="@string/calendar_entry_initial"
        android:textAlignment="center"
        android:paddingTop="5dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal"
        android:id="@+id/edit_journal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />


</android.support.percent.PercentRelativeLayout>
