<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ca.amritpal.migrainetracker.ui.entry.JournalFragment"
    >

    <TextView
        android:id="@+id/journal_entry_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/journal_entry_title"
        android:textAlignment="center"
        app:layout_heightPercent="5%"
        />

    <TextView
        android:id="@+id/journal_entry_date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        app:layout_heightPercent="5%"
        android:layout_below="@id/journal_entry_title"/>

    <TextView
        android:id="@+id/journal_title_morning"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/journal_entry_morning"
        app:layout_heightPercent="5%"
        android:layout_below="@id/journal_entry_date"
        />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="5%"
        android:max="10"
        android:progress="0"
        android:layout_below="@+id/journal_title_morning"
        android:id="@+id/journal_morning_slider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/journal_title_afternoon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/journal_entry_afternoon"
        app:layout_heightPercent="5%"
        android:layout_below="@id/journal_morning_slider"
        />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="5%"
        android:max="10"
        android:progress="0"
        android:layout_below="@+id/journal_title_afternoon"
        android:id="@+id/journal_afternoon_slider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/journal_title_evening"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/journal_entry_evening"
        app:layout_heightPercent="5%"
        android:layout_below="@id/journal_afternoon_slider"
        />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="5%"
        android:max="10"
        android:progress="0"
        android:layout_below="@+id/journal_title_evening"
        android:id="@+id/journal_evening_slider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

</android.support.percent.PercentRelativeLayout>
